refactor tests and create random tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,3 +31,5 @@ macro(package_add_test TESTNAME)
 endmacro()
 
 package_add_test(matrix_basic matrix_basic.cpp)
+package_add_test(vector_basic vector_basic.cpp)
+package_add_test(unfiled unfiled.cpp)
